--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.8",
+        "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.513.0",
@@ -22,6 +23,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.57.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^7.6.2",
         "recharts": "^2.15.3",
         "sonner": "^2.0.5",
